affichage des titres des livres dans MainPage

--- a/Code/p-app-lecture/p-app-lecture.csproj
+++ b/Code/p-app-lecture/p-app-lecture.csproj
@@ -82,6 +82,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Platforms\Android\Resources\XMLFile1.xml" />
 	  <None Remove="Resources\Images\logo home.png" />
 	  <None Remove="Resources\Images\logo_account.png" />
 	  <None Remove="Resources\Images\logo_bookmarck.png" />
@@ -94,7 +95,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageReference Include="MySql.Data" Version="8.4.0" />
+		<PackageReference Include="MySqlConnector" Version="2.3.7" />
 		<PackageReference Include="VersOne.Epub" Version="3.3.1" />
 	</ItemGroup>
 
